Docker/alpine-cloud/k8s/Deployment_backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: skf-flask-back
  labels:
    app.kubernetes.io/name: skf-flask-back
    app.kubernetes.io/instance: skf-flask-back
    app.kubernetes.io/version: "2.2.2"
spec:
  type: NodePort
  ports:
    - port: 8888
      name: skf-flask-backend-port
  selector:
    app.kubernetes.io/name: skf-flask-back
    app.kubernetes.io/instance: skf-flask-back
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skf-flask-back
  labels:
    app.kubernetes.io/name: skf-flask-back
    app.kubernetes.io/instance: skf-flask-back
    app.kubernetes.io/version: "2.2.2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: skf-flask-back
      app.kubernetes.io/instance: skf-flask-back
  template:
    metadata:
      labels:
        app.kubernetes.io/name: skf-flask-back
        app.kubernetes.io/instance: skf-flask-back
    spec:
      securityContext:
        runAsUser: 1000
      containers:
        - name: skf-flask-back
          image: "blabla1337/skf-api:delta"
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
---
