Docker/alpine-cloud/k8s/Deployment_frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: skf-flask-front
  labels:
    app.kubernetes.io/name: skf-flask-front
    app.kubernetes.io/instance: skf-flask-front
    app.kubernetes.io/version: "2.2.2"
spec:
  type: NodePort
  ports:
    - port: 8788
      name: skf-flask-frontend-port
  selector:
    app.kubernetes.io/name: skf-flask-front
    app.kubernetes.io/instance: skf-flask-front
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skf-flask-front
  labels:
    app.kubernetes.io/name: skf-flask-front
    app.kubernetes.io/instance: skf-flask-front
    app.kubernetes.io/version: "2.2.2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: skf-flask-front
      app.kubernetes.io/instance: skf-flask-front
  template:
    metadata:
      labels:
        app.kubernetes.io/name: skf-flask-front
        app.kubernetes.io/instance: skf-flask-front
    spec:
      securityContext:
        runAsUser: 100
      containers:
        - name: skf-flask-front
          image: "blabla1337/skf-angular:charlie"
          imagePullPolicy: Always
          ports:
          - containerPort: 8788
---
