Docker/alpine-cloud/k8s/ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "skf-ingress-controller"
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
#   nginx.ingress.kubernetes.io/whitelist-source-range: comma separated list of CIDR blocks to whitelist - todo - make configmaps
spec:
  tls:
  - hosts:
    - demo.securityknowledgeframework.org
    secretName: demo.securityknowledgeframework.org
  rules:
  - host: demo.securityknowledgeframework.org
    http:
     paths:
     - backend:
        service:
          name: skf-flask-front
          port: 
            number: 8788
       path: /
       pathType: Prefix
     - backend:
         service:
          name: skf-flask-back
          port: 
            number: 8888
       path: /api
       pathType: Prefix
     - backend:
         service:
          name: skf-flask-back
          port: 
            number: 8888
       path: /swaggerui
       pathType: Prefix
